--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-qr-code": "^2.0.12",
     "react-redux": "^8.1.1",
     "react-router": "^6.12.1",
     "react-router-dom": "^6.12.1",
